Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100802

[REG 6.2.2->6.2.3]Checkable QPushButton does not visually display checked state when toggled on macOS

XMLWordPrintable

    • macOS
    • af05f278ed (qt/qtbase/dev) af05f278ed (qt/tqtc-qtbase/dev) 853d3ef893 (qt/qtbase/6.3) 853d3ef893 (qt/tqtc-qtbase/6.3) 853d3ef893 (qt/tqtc-qtbase/6.3.0) 636cdc6ac7 (qt/qtbase/6.2) 636cdc6ac7 (qt/tqtc-qtbase/6.2) 865d61c0da (qt/tqtc-qtbase/5.15)

      Checkable QPushButton does not visually display checked state to user when toggled on macOS.

      Way to reproduce:
      Build and Run attached example project with Qt 6.2.3 on macOS.
      The button should be checkable but it can't be visually toggled by clicking.

      Works correctly with earlier Qt versions and on other platforms.

      Issue does not reproduce if style is changed from 'macOS' to (for example) 'Fusion' style.
      Issue is induced by 958d28ee96de27ff067c3d994e1898d9a1e812b7

        1. qtbug100802.zip
          0.6 kB
          Tuukka Kettunen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            foxxx Tuukka Kettunen
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes